# NEMO-WM

./: .gitignore  ABLATION_RESULTS.md  ADDING_NEW_DOMAIN.md  ARCHITECTURE.md  Aphasia_ablation.txt  CLAUDE.md  CLIP_ALIGNMENT_BASELINE.md  CORTEX16_PATH_TO_PROFIT.md  CORTEX16_SESSION_2026-03-30.md  CORTEX_ARCHITECTURE.md  CORTEX_PE_v1.0.md  CWM_DOPAMINE_REWARD_SYSTEM.md  CWM_MASTER_PLAN.md  CWM_NEXT_STEPS.md  CWM_RESEARCH_INTEGRATION.md  CWM_SKILL_COMPOSITION_LEGGED_RESEARCH.md  CWM_STATUS.md  CWM_SWM_INTEGRATION_PLAN.md  CWM_TRAINING_OBSERVATIONS.md  GEODLATENTDB_NOTES.md  HOW_TO_ADD_DOMAIN.md  NEMO_WM_COMPLETE.md  NEMO_WM_README.md  NEMO_WM_SELF_QUESTIONS.md  NEUROMODULATOR_EXTENSIONS.md  NeMo_WM_Website.html  NeMo_WM_Website_v4.html  NeMo_WM_Website_v4_fixed.html  PAPER_PATCH_ROUTER.md  PROBE_LATENTS_RESULTS.md  README.md  README_recovered.md  RECON_TIMELINE.md  REGIME_ANALYSIS.md  REPRODUCE.md  RESULTS_AUDIT.md  ROUTER_RECOVERY_RESULT.md  SESSION_STATUS_2026_04_13.md  SPRINT2_RESULTS.md  SPRINT4_GEODLATENTDB_FINAL.md  (+313 more)
core/: arc_advanced_ops.py  arc_beam_search.py  arc_bidirectional.py  arc_chain_search.py  arc_combined.py  arc_dataset_loader.py  arc_deepmind_math.py  arc_diagnostic.py  arc_diff_template.py  arc_dsa_patterns.py  arc_grid_art.py  arc_grid_math.py  arc_gym.py  arc_iterative.py  arc_jepa.py  arc_jepa_overnight.py  arc_library_compress.py  arc_local_evolver.py  arc_local_rule.py  arc_math_curriculum.py  arc_mental_models.py  arc_neural_synth.py  arc_nps.py  arc_npu_synth.py  arc_numerical.py  arc_object_graph.py  arc_overnight_compose.py  arc_phase1.py  (+39 more)
(+79 files in other folders)
